--- a/course_1/templates/menu.html
+++ b/course_1/templates/menu.html
@@ -3,6 +3,6 @@
 <body>
     <button>아메리카노</button>
     <button>라떼</button>
-    <button>녹차</button>
+    <button style="font-size:70pt;">녹차</button>
 </body>
 </html>
