feat: add style in menu.html

--- a/course_1/templates/menu.html
+++ b/course_1/templates/menu.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-<html>
-<body>
-    <button>아메리카노</button>
-    <button>라떼</button>
-    <button style="font-size:70pt;">녹차</button>
-</body>
-</html>
+<center>
+메뉴판<p>
+<button name="menu1" style="width:70pt;">아메리카노</button><br>
+<button name="menu2" style="width:70pt;">카페라떼</button><br>
+</p><hr>
+<button name="menu2" style="width:70pt;">녹차</button>
